style and structure changes

--- a/index.html
+++ b/index.html
@@ -531,10 +531,13 @@
         </div>
 
         <div class="form-subscribe">
-          <label for="subscribe" class="subscribe-label">
-            Subscribe
-            <input type="text" />
-          </label>
+          <form class="subscribe-form">
+            <label for="subscribe" class="subscribe-label">
+              Subscribe
+              <input type="text" id="subscribe" class="subscribe-input" />
+              <button class="subscribe-button" type="submit">Subscribe</button>
+            </label>
+          </form>
         </div>
       </div>
     </footer>
