--- a/index.html
+++ b/index.html
@@ -530,11 +530,17 @@
           </ul>
         </div>
 
-        <div class="form-subscribe">
+        <div class="container-subscribe">
           <form class="subscribe-form">
+            Subscribe
+            <p class="subscribe-paragraph"></p>
             <label for="subscribe" class="subscribe-label">
-              Subscribe
-              <input type="text" id="subscribe" class="subscribe-input" />
+              <input
+                type="text"
+                id="subscribe"
+                class="subscribe-input"
+                placeholder="E-mail"
+              />
               <button class="subscribe-button" type="submit">Subscribe</button>
             </label>
           </form>
