--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
     <div class="modal-overlay-popup">
       <div class="modal-window">
         <button type="submit" class="modal-close-button">
-          <svg class="svg-icon" width="24" height="24">
+          <svg class="svg-icon modal-input-icon" width="24" height="24">
             <use href="./images/icons.svg#close" />
           </svg>
         </button>
