--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
               <a href="./index.html" class="nav-li-a active-link">Studio</a>
             </li>
             <li class="nav-li-elem">
-              <a href="#" class="nav-li-a active-link">Portfolio</a>
+              <a href="#" class="nav-li-a">Portfolio</a>
             </li>
             <li class="nav-li-elem">
-              <a href="#" class="nav-li-a active-link">Contacts</a>
+              <a href="#" class="nav-li-a">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -531,24 +531,23 @@
         </div>
 
         <div class="container-subscribe">
+          <p class="subscribe-paragraph">Subscribe</p>
           <form class="subscribe-form">
-            <p class="subscribe-paragraph">Subscribe</p>
-            <div class="subscribe-align-items">
-              <label for="subscribe" class="subscribe-label">
-                <input
-                  type="text"
-                  id="subscribe"
-                  class="subscribe-input"
-                  placeholder="E-mail"
-                />
-              </label>
-              <button class="subscribe-button" type="submit">
-                Subscribe
-                <svg class="svg-icon" width="24" height="20">
-                  <use href="./images/icons.svg#telegram" />
-                </svg>
-              </button>
-            </div>
+            <label for="subscribe" class="subscribe-label">
+              <input
+                type="email"
+                id="subscribe"
+                class="subscribe-input"
+                placeholder="E-mail"
+                name="email"
+              />
+            </label>
+            <button class="subscribe-button" type="submit">
+              Subscribe
+              <svg class="svg-icon subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#telegram" />
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -557,7 +556,7 @@
     <div class="modal-overlay-popup">
       <div class="modal-window">
         <button type="submit" class="modal-close-button">
-          <svg class="svg-icon modal-input-icon" width="24" height="24">
+          <svg class="svg-icon svg-close-icon" width="8" height="8">
             <use href="./images/icons.svg#close" />
           </svg>
         </button>
@@ -565,76 +564,86 @@
           Leave your contacts and we will call you back
         </p>
         <form class="modal-form">
-          <label for="name" class="modal-label">Name</label>
-
           <div class="modal-wrapper">
-            <svg class="svg-icon modal-input-icon" width="18" height="18">
-              <use href="./images/icons.svg#person-icon"></use>
-            </svg>
-
-            <input
-              id="name"
-              type="text"
-              class="modal-input"
-              autocomplete="off"
-              name="name"
-            />
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="modal-input-wrapper">
+              <input
+                id="user-name"
+                type="text"
+                class="modal-input"
+                autocomplete="off"
+                name="user-name"
+              />
+              <svg class="svg-icon modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#person-icon"></use>
+              </svg>
+            </div>
           </div>
 
-          <label for="phone" class="modal-label">Phone</label>
-
           <div class="modal-wrapper">
-            <svg class="svg-icon modal-input-icon" width="18" height="18">
-              <use href="./images/icons.svg#phone-icon"></use>
-            </svg>
-
-            <input
-              id="phone"
-              type="tel"
-              class="modal-input"
-              autocomplete="off"
-              name="phone"
-            />
+            <label for="user-phone" class="modal-label">Phone</label>
+            <div class="modal-input-wrapper">
+              <input
+                id="user-phone"
+                type="tel"
+                class="modal-input"
+                autocomplete="off"
+                name="user-phone"
+              />
+              <svg class="svg-icon modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#phone-icon"></use>
+              </svg>
+            </div>
           </div>
 
-          <label for="email" class="modal-label">Email</label>
-
           <div class="modal-wrapper">
-            <svg class="svg-icon modal-input-icon" width="18" height="18">
-              <use href="./images/icons.svg#email-icon"></use>
-            </svg>
-
-            <input
-              id="email"
-              type="email"
-              class="modal-input"
-              autocomplete="off"
-              name="email"
-              required
-            />
+            <label for="user-email" class="modal-label">Email</label>
+            <div class="modal-input-wrapper">
+              <input
+                id="user-email"
+                type="email"
+                class="modal-input"
+                autocomplete="off"
+                name="user-email"
+              />
+              <svg class="svg-icon modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#email-icon"></use>
+              </svg>
+            </div>
           </div>
 
-          <label for="comment" class="modal-label">Comment</label>
+          <div class="modal-wrapper modal-comment">
+            <label for="user-comment" class="modal-label">Comment</label>
 
-          <div class="modal-wrapper">
             <textarea
-              class="modal-input comment-field"
-              name="comment"
-              id="comment"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
+              class="modal-comment-input"
             ></textarea>
           </div>
-        </form>
-        <div class="modal-checkbox-wrapper">
-          <label class="modal-label modal-checkbox">
-            <input type="checkbox" />
-            <span>
+
+          <div class="modal-checkbox-wrapper">
+            <input
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
+              class="checkbox-input visually-hidden"
+            />
+            <label for="user-privacy" class="modal-checkbox-label">
+              <span class="checkbox-span">
+                <svg class="svg-icon" width="10" height="8">
+                  <use href="./images/icons.svg#checkbox-icon" />
+                </svg>
+              </span>
               I accept the terms and conditions of the
-              <a class="modal-link" href="#">Privacy Policy</a>
-            </span>
-          </label>
-          <button class="modal-send-button" type="submit">Send</button>
-        </div>
+
+              <a href="#" class="checkbox-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="modal-send-button">Send</button>
+        </form>
       </div>
     </div>
   </body>
