--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
     <div class="modal-overlay-popup">
       <div class="modal-window">
         <button type="submit" class="modal-close-button">
-          <svg class="svg-icon svg-close-icon" width="8" height="8">
+          <svg class="svg-close-icon" width="8" height="8">
             <use href="./images/icons.svg#close" />
           </svg>
         </button>
@@ -574,7 +574,7 @@
                 autocomplete="off"
                 name="user-name"
               />
-              <svg class="svg-icon modal-input-icon" width="18" height="24">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#person-icon"></use>
               </svg>
             </div>
@@ -590,7 +590,7 @@
                 autocomplete="off"
                 name="user-phone"
               />
-              <svg class="svg-icon modal-input-icon" width="18" height="24">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#phone-icon"></use>
               </svg>
             </div>
@@ -606,7 +606,7 @@
                 autocomplete="off"
                 name="user-email"
               />
-              <svg class="svg-icon modal-input-icon" width="18" height="24">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#email-icon"></use>
               </svg>
             </div>
@@ -633,7 +633,7 @@
             />
             <label for="user-privacy" class="modal-checkbox-label">
               <span class="checkbox-span">
-                <svg class="svg-icon" width="10" height="8">
+                <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#checkbox-icon" />
                 </svg>
               </span>
