--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
     <div class="modal-overlay-popup">
       <div class="modal-window">
-        <button type="submit" class="modal-close-button">
+        <button type="button" class="modal-close-button">
           <svg class="svg-close-icon" width="8" height="8">
             <use href="./images/icons.svg#close" />
           </svg>
